# turtles_catch_them_all

install/: local_setup.sh  setup.sh
install/bring_up/share/bring_up/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/bring_up/share/bring_up/cmake/: bring_upConfig-version.cmake  bring_upConfig.cmake
install/bring_up/share/bring_up/environment/: ament_prefix_path.dsv  path.dsv
install/bring_up/share/bring_up/launch/: turtlebringup.launch.py
install/my_turtle_interface/share/my_turtle_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_turtle_interface/share/my_turtle_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  (+14 more)
install/turtle_catch_them_all/lib/turtle_catch_them_all/: turtlecatch  turtlespawn
install/turtle_catch_them_all/share/turtle_catch_them_all/: package.bash  package.dsv  package.ps1  package.sh  package.xml
log/: latest_build  latest_list
src/bring_up/: CMakeLists.txt
src/bring_up/launch/: turtlebringup.launch.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/my_turtle_interface/: CMakeLists.txt  package.xml
src/my_turtle_interface/msg/: TurtleProjectArray.msg
src/turtle_catch_them_all/: package.xml  setup.cfg  setup.py
src/turtle_catch_them_all/turtle_catch_them_all/: spawner.py  turtle_controller.py
(+96 files in other folders)
